--- a/assets/sass/_activities.scss
+++ b/assets/sass/_activities.scss
@@ -3,7 +3,7 @@
   height: 100%;
   padding-top: 67px;
   position: relative;
-
+  overflow: hidden;
   .wrap-activities {
     width: 100%;
     height: 100%;
