--- a/assets/sass/_navigation.scss
+++ b/assets/sass/_navigation.scss
@@ -8,12 +8,25 @@
     @include flex(row, nowrap, center, flex-start);
   }
 .navbar{
+  width: 100%;
   @include flex(row, nowrap, center, center);
   padding: 0;
   @include media-max($M){
-    @include flex(column, nowrap, center, flex-start);
+    @include flex(column, nowrap, flex-start, center);
   }
+  .navbar-collapse{
+    width: 100%;
+    padding: 2px 15px;
+    text-align: right;
+    padding: 0;
+  }
+  .collapse{
+    text-align: right;
+    padding: 0;
+    width: 100%;
+     }
   .navbar-nav{
+    padding: 0;
     .nav-item{
       padding: 0;
       margin: 10px 0;
@@ -25,8 +38,83 @@
         @include media-min($L){
           padding: 10px 40px;
         }
+        @include media-max($M){
+          @include font-source-sans(.88rem, #fff, 500, 1.7rem);
+          padding: 0 15px;
+        }
+      }
+    }
+  }
+  .navbar-toggler{
+    .hamburger {
+      width: 30px;
+      height: 20px;
+      cursor: pointer;
+      margin-top: 15px;
+      position: relative;
+
+      &:before {
+        font-family: Tahoma;
+        content: "MENU";
+        letter-spacing: 2px;
+        font-size: 8px;
+        position: absolute;
+        right: 0px;
+        top: -12px;
+        color: #fff;
+        @include transition(all 0.3s);
+      }
+      span {
+        display: block;
+        position: absolute;
+        height: 2.22px;
+        width: 100%;
+        background: #fff none repeat scroll 0% 0%;
+
+        opacity: 1;
+        right: 0;
+@include transition( all 0.25s ease-in-out 0s);
+        &:nth-child(1) {
+          margin-top: 0px;
+        }
+
+        &:nth-child(2) {
+          margin-top: 7px;
+        }
+
+        &:nth-child(3) {
+          margin-top: 14px;
+        }
+      }
+    }
+    .opened {
+      &:before {
+        right: 20px;
+        top: 5px;
+        @include transition( all 0.25s ease-in-out 0s);
+        @include transform(rotate(-90deg));
       }
 
+
+
+      span {
+        &:nth-child(1) {
+          margin-top: 8px;
+          @include transform(rotate(135deg));
+        }
+
+        &:nth-child(2) {
+          @include opacity(0);
+          right: -45px;
+          background: #fff !important;
+
+        }
+
+        &:nth-child(3) {
+          @include transform(rotate(-135deg));
+          margin-top: 8px;
+        }
+      }
     }
   }
 }
@@ -38,6 +126,7 @@
     margin: 20px 50px 20px 20px;
     @include media-max($M){
       left: 0;
+      margin: 9px 50px 20px 9px;
     }
     .btn-change-language{
       @include font-source-sans(1rem, #000, 800, 1.1rem);
@@ -49,14 +138,24 @@
   }
 }
 body.fp-viewing-firstSection{
-  .navigation{
-    background-color: transparent;
-  }
   .navigation .navbar .navbar-nav .nav-item{
     .nav-link.firstSection{
       color: $color-pink;
     }
   }
+
+  .navigation{
+    background-color: transparent;
+    @include media-max($M){
+      background-color: transparent;
+    }
+  }
+  .navigation.add-style-first{
+    @include media-max($M){
+      background-color: $color-dark-blue;
+    }
+  }
+
 }
 
 body.fp-viewing-secondSection,body.fp-viewing-secondSection-0{
@@ -64,33 +163,57 @@ body.fp-viewing-secondSection,body.fp-viewing-secondSection-0{
   .navbar .navbar-nav .nav-item{
     .nav-link{
       color: $color-dark-blue;
+      @include media-max($M){
+        color: #fff;
+      }
     }
     .nav-link.secondSection{
      color: $color-pink;
     }
-  }}
+  }
+    @include media-max($M){
+  background-color: $color-dark-blue;
+    }}
 }
 body.fp-viewing-thirdSection,body.fp-viewing-thirdSection-0{
   .navigation{
 .navbar .navbar-nav .nav-item{
   .nav-link{
     color: $color-dark-blue;
+    @include media-max($M){
+      color: #fff;
+    }
   }
     .nav-link.thirdSection{
       color: $color-pink;
     }
-  }}
+  }
+    @include media-max($M){
+      background-color: $color-dark-blue;
+      .nav-link{
+        color: #fff;
+        @include media-max($M){
+          color: #fff;
+        }
+      }
+    }}
 }
 body.fp-viewing-fourthSection,body.fp-viewing-fourthSection-0{
   .navigation{
     .navbar .navbar-nav .nav-item{
       .nav-link{
         color: $color-dark-blue;
+        @include media-max($M){
+          color: #fff;
+        }
       }
 
       .nav-link.fourthSection{
         color: $color-pink;
       }
+    }
+    @include media-max($M){
+      background-color: $color-dark-blue;
     }
   }
 }
@@ -101,6 +224,9 @@ body.fp-viewing-fifthSection,body.fp-viewing-fifthSection-0{
       .nav-link.fifthSection{
         color: $color-pink;
       }
+    }
+    @include media-max($M){
+      background-color: $color-dark-blue;
     }
   }
 
