--- a/assets/sass/_slider.scss
+++ b/assets/sass/_slider.scss
@@ -4,6 +4,7 @@
   padding-top: 67px;
   background:#fff url("../img/cloud.svg") no-repeat center center;
   background-size: cover;
+  overflow: hidden;
   .wrap-slider{
     height: 100%;
     width: 100%;
