--- a/assets/sass/_home.scss
+++ b/assets/sass/_home.scss
@@ -7,6 +7,7 @@
   width: 100%;
   height: 100%;
   height: 100vh;
+  overflow: hidden;
   .wrap-home {
     position: relative;
     width: 100%;
@@ -157,3 +158,64 @@
   }
 }
 
+.box-home{
+  @include media-max($M){
+    .wrap-home {
+      .home {
+        .welcome {
+          margin: 8% 0;
+        }
+
+        .explain {
+          font-size: .88rem;
+          font-weight: 500;
+        }
+
+        .image-logo-card {
+          img {
+            max-width: 250px;
+          }
+        }
+      }
+
+      .octagonWrap {
+        width: 70px;
+        height: 70px;
+        bottom: 20px;
+        left: -24px;
+      }
+
+      .octagon {
+        &::before {
+        }
+      }
+
+      .octagonWrap2 {
+        width: 50px;
+        height: 50px;
+        bottom: 54px;
+        left: 16px;
+      }
+
+      .octagon2 {
+
+        &::before {
+        }
+      }
+
+      .Hexagons {
+        width: 80px;
+        height: 80px;
+        bottom: -7px;
+        right: -35px;
+      }
+
+      .Triangle {
+        display: none;
+      }
+
+      .home-background {
+      }
+    }
+  }
+}
