--- a/assets/sass/_slider.scss
+++ b/assets/sass/_slider.scss
@@ -1,56 +1,85 @@
-.box-slider{
+.box-slider {
   height: 100%;
   width: 100%;
   padding-top: 67px;
-  background:#fff url("../img/cloud.svg") no-repeat center center;
+  background: #fff url("../img/cloud.svg") no-repeat center center;
   background-size: cover;
   overflow: hidden;
-  .wrap-slider{
-    height: 100%;
-    width: 100%;
-.carousel{
-  height: 100%;
-  width: 100%;
-  .carousel-indicators{
+
+  .wrap-slider {
     height: 100%;
     width: 100%;
 
-  }
-  .carousel-inner{
-    height: 100%;
-    width: 100%;
-    .carousel-item{
+    .carousel {
       height: 100%;
       width: 100%;
-      .slider-image{
+
+      .carousel-indicators {
         height: 100%;
         width: 100%;
-        @include flex(row, nowrap, center, center);
-        .side-slider-image{
-          width: 50%;
-          background-color: transparent;
-          img{
-          width: 100%;
-            height: auto;
-          }
-        }
 
       }
-.carousel-caption{
-  bottom: 50px;
-}
-    }
-    .carousel-item-next:not(.carousel-item-left),
-    .active.carousel-item-right {
-      transform: translateX(-100%);
-    }
-    .carousel-item-prev:not(.carousel-item-right),
-    .active.carousel-item-left {
-      transform: translateX(100%);
+
+      .carousel-inner {
+        height: 100%;
+        width: 100%;
+
+        .carousel-item {
+          height: 100%;
+          width: 100%;
+
+          .slider-image {
+            height: 100%;
+            width: 100%;
+            @include flex(row, nowrap, center, center);
+
+            .side-slider-image {
+              width: 50%;
+              background-color: transparent;
+
+              img {
+                width: 100%;
+                height: auto;
+              }
+            }
+
+
+          }
+          .carousel-caption {
+            bottom: 50px;
+          }
+        }
+      }
+            .carousel-item-next:not(.carousel-item-left),
+            .active.carousel-item-right {
+              transform: translateX(-100%);
+            }
+
+            .carousel-item-prev:not(.carousel-item-right),
+            .active.carousel-item-left {
+              transform: translateX(100%);
+            }
+
+
+
+
+      .carousel-control-next{
+        .carousel-control-slider-next-icon{
+          display: inline-block;
+          width: 50px;
+          height: 50px;
+          background:transparent url("../img/next.svg") no-repeat center center;
+        }
+      }
+      .carousel-control-prev{
+        .carousel-control-slider-prev-icon{
+          display: inline-block;
+          width: 50px;
+          height: 50px;
+          background:transparent url("../img/next.svg") no-repeat center center;
+          @include transform(rotate(180deg));
+        }
+      }
     }
   }
-
-}
-  }
-
 }
