--- a/assets/sass/rtl/_home.scss
+++ b/assets/sass/rtl/_home.scss
@@ -60,6 +60,7 @@
       z-index: 10;
       bottom: 20px;
       left: 120px;
+      @include animations(0, 50s, mspin, infinite, linear);
     }
 
     .octagon {
@@ -97,6 +98,7 @@
       z-index: 10;
       bottom: 60px;
       left: 202px;
+      @include animations(0, 35s, spin, infinite, linear);
     }
 
     .octagon2 {
