--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -13,6 +13,7 @@
 @import "rtl/home";
 @import "rtl/systems";
 @import "rtl/activities";
+@import "rtl/team";
 @import "rtl/slider";
 @import "rtl/connection";
 
