--- a/assets/sass/rtl/_mixins.scss
+++ b/assets/sass/rtl/_mixins.scss
@@ -561,3 +561,9 @@ textarea {
     }
   }
 }
+@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
+@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
+@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
+@-moz-keyframes mspin { 100% { -moz-transform: rotate(-360deg); } }
+@-webkit-keyframes mspin { 100% { -webkit-transform: rotate(-360deg); } }
+@keyframes mspin { 100% { -webkit-transform: rotate(-360deg); transform:rotate(-360deg); } }
