--- a/assets/sass/rtl/_particular.scss
+++ b/assets/sass/rtl/_particular.scss
@@ -1,12 +1,25 @@
-#particles-js{
+#particles-js {
   position: absolute;
   width: 100%;
   height: 100%;
   background-color: #343888;
-   @include gradient(horizontal, rgb(25,28,73), rgb(63,74,141));
+  @include gradient(horizontal, rgb(25, 28, 73), rgb(63, 74, 141));
   background-size: cover;
   background-position: 50% 50%;
   background-repeat: no-repeat;
-  top:0;
-  right:0;
+  top: 0;
+  right: 0;
+}
+
+#particles_js {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #4b579a;
+  @include gradient(horizontal, #191d5d, #4b579a);
+  background-size: cover;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  top: 0;
+  right: 0;
 }
